# pfc-pj

./: comentarios_API_14_oct.txt  comentarios_API_14_oct.txt~  install-marta.sh
david/: .comentarios_API_14_oct.txt.swp  comentarios_API_14_oct.txt  script_backup  script_backup~  script_restore_backup
david/bbdd/: bd_pfc.sql  bd_pfc.sql~
david/conf/: .conf-david.php.swp  .conf-gabarro.php.swp  conf-gabarro.php
david/php/: championship.php  circuit.php  circuit_championship.php  code.php  conf.php  connection.php  error.php  game.php  includes.php  inscription.php  main.php  others.php  prueba.php  prueba.php~  prueba_mia.php  prueba_session.php  sanitize.php  script_circuit.php  script_data_cleaner.php  team.php  user.php  user_team.php
david/www/: championship.php  circuit.php  circuit_championship.php  connection.php  game.php  includes.php  inscription.php  prueba.php  team.php  user.php  user_team.php
marta/: JocProg2.java  ServerRequest.java  comentarios_API_14_oct.txt  comentarios_API_14_oct.txt~
marta/JocProg/: .project
marta/JocProg/src/gwtJuego/: JocProg.gwt.xml
marta/JocProg/war/: JocProg.css  JocProg.html
marta/JocProg/war/WEB-INF/: web.xml
marta/JocProg/war/jocprog/: 042C43660B2CA802E041E2DA11583539.cache.html  0618C834F635E5EC73B684BD4BB3CB9D.cache.html  (+239 more)
omer/racing/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
omer/racing/circuitos/: .gitignore  Makefile  basic.txt  basic2.txt  basic3.txt  chato.txt  newbasic.txt  newbasic2.txt  newbasic3.txt  script.sh  test.txt
omer/racing/img/: .gitignore  Makefile  rotate.sh
omer/racing/old/: car.h  car.h~  simulator.cc  simulator.cc~  simulator.h  simulator.h~
omer/racing/pack/: Makefile
omer/racing/src/: #sim.cc#  .gitignore  CMakeLists.txt  QCircuitView.cc  QCircuitView.h  QMainView.cc  QMainView.h  Qview.cc  Qview.h  bezier.cc  bezier.h  car.h  carAI.cc  carAI.h  common.h  corbes.cc  corbes.h  mainsim.cc  mainview.cc  monocar.cc  monocar.h  proxycar.cc  proxycar.h  run.py  sim.cc  sim.h  studentcode.h  trace.cc  trace.h
omer/scripts/: compila.sh  instrucciones.txt  paquetes.txt  post-git.sh  post-git.sh~  restart-bd.sh
(+15 files in other folders)
